--- a/.github/workflows/master_app-yolwqcowpnvls.yml
+++ b/.github/workflows/master_app-yolwqcowpnvls.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -65,14 +65,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID96C9 }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID96C9 }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID96C9 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B0A4CCB3A9D2483FB34510268A42604C }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_68D8AD6314B143479FC5EA7E3C1D6334 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_682BD9B1C6C54B89BEEAEB7EA384075A }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'app-yolwqcowpnvls'
-          slot-name: 'production'
+          slot-name: 'Production'
           
